# dynamic-injection-linux

code/: .gitignore  CMakeLists.txt  DynamicLinkingLinux.hpp  README.md
code/example/: CMakeLists.txt  simple.cpp  to_be_injected.cpp
code/src/: CMakeLists.txt  DynamicLinkingLinux.cpp  FileMapping.cpp  FileMapping.hpp  ForeignMemoryBlock.hpp  MemoryStatus.cpp  MemoryStatus.hpp  MyLibc.cpp  MyLibc.hpp  ProcessHandler.cpp  ProcessHandler.hpp  Ptrace.cpp  Ptrace.hpp  RemoteLoader.hpp  SnapShotData.hpp  ThreadAttr.hpp  utilities.hpp
code/tests/: CMakeLists.txt  Invoke.cpp  MyLibc.cpp  ProcessHandler.cpp
slide/: Makefile  about.tex  conclusion.tex  detection.tex  include.tex  linux.tex  main.tex  references.bib  references.tex  windows.tex
slide/src/: CreateRemoteThreadExKernelBase.asm  CreateRemoteThreadExKernelBase.c  CreateRemoteThreadExKernelBaseInline.c  CreateRemoteThreadKernel32.asm  CreateRemoteThreadKernel32.c  NtCreateThreadExNtdll.asm  ProcessHandler.skln.hpp  Ptrace.skln.hpp  RemoteCall.pseudo.cpp  RemoteLoader.hpp
